chore(pkf): refactor package names

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Build Logx Package
         run: |
-          # go build -v -race
-          go build ./...
+          go build -v -race
+          # go build ./...
         working-directory: ./
 #      - name: Upload Artifact
 #        uses: actions/upload-artifact@v3
